force-app/main/default/objects/Request_c__x/Request_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>Request__c</externalName>
    <label>TC Request</label>
    <pluralLabel>TC Requests</pluralLabel>
</CustomObject>