force-app/main/default/objects/Request_c__x/fields/Account_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_c__c</fullName>
    <externalDeveloperName>Account_Manager__c</externalDeveloperName>
    <inlineHelpText>Who is the Accont Manager assigned to this Account?</inlineHelpText>
    <label>Account Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>