force-app/main/default/objects/Request_c__x/fields/Account_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_c__c</fullName>
    <externalDeveloperName>Account_Type__c</externalDeveloperName>
    <inlineHelpText>Is this a Hotel or a Non-Hotel?</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Non-Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>