force-app/main/default/objects/Request_c__x/fields/Account_Valuation_Roll_Up_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Valuation_Roll_Up_c__c</fullName>
    <externalDeveloperName>Account_Valuation_Roll_Up__c</externalDeveloperName>
    <inlineHelpText>What is the total value of all related properties?</inlineHelpText>
    <label>Account Valuation Roll-Up</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>