force-app/main/default/objects/Request_c__x/fields/Active_NMI_Products_c__c.field-meta.xml
<CustomField>
    <fullName>Active_NMI_Products_c__c</fullName>
    <externalDeveloperName>Active_NMI_Products__c</externalDeveloperName>
    <label>Active NMI Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>S&amp;C</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>