force-app/main/default/objects/Request_c__x/fields/Active_TC_Products_c__c.field-meta.xml
<CustomField>
    <fullName>Active_TC_Products_c__c</fullName>
    <externalDeveloperName>Active_TC_Products__c</externalDeveloperName>
    <label>Active TC Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency360</fullName>
            </value>
            <value>
                <fullName>Agency360 GDS Advertising Edition</fullName>
            </value>
            <value>
                <fullName>Agency Position</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Bundled Agency360</fullName>
            </value>
            <value>
                <fullName>Bundled Demand360</fullName>
            </value>
            <value>
                <fullName>Bundled Featured Property</fullName>
            </value>
            <value>
                <fullName>Bundled GMS</fullName>
            </value>
            <value>
                <fullName>Bundled Guestview</fullName>
            </value>
            <value>
                <fullName>Bundled iHotelier</fullName>
            </value>
            <value>
                <fullName>Bundled Rate360</fullName>
            </value>
            <value>
                <fullName>Bundled Single Media Subscription</fullName>
            </value>
            <value>
                <fullName>Bundled Spotlight</fullName>
            </value>
            <value>
                <fullName>Bundled TVS</fullName>
            </value>
            <value>
                <fullName>Bundled Web - Other</fullName>
            </value>
            <value>
                <fullName>Bundled Web - Premium</fullName>
            </value>
            <value>
                <fullName>Bundled Web - Pro</fullName>
            </value>
            <value>
                <fullName>Bundled Web - SEO/SMO</fullName>
            </value>
            <value>
                <fullName>Bundle – Web Builder</fullName>
            </value>
            <value>
                <fullName>Bundle – Web Concierge</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Consortia</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Demand360</fullName>
            </value>
            <value>
                <fullName>Demand Position</fullName>
            </value>
            <value>
                <fullName>Destination Insights</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>