force-app/main/default/objects/Request_c__x/fields/Brand_c__c.field-meta.xml
<CustomField>
    <fullName>Brand_c__c</fullName>
    <externalDeveloperName>Brand__c</externalDeveloperName>
    <inlineHelpText>What is the Brand for this Hotel?   If non-hotel, put &apos;0&apos;.</inlineHelpText>
    <label>Brand</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>TC Requests</relationshipLabel>
    <relationshipName>TC_Requests</relationshipName>
    <type>ExternalLookup</type>
</CustomField>