force-app/main/default/objects/Request_c__x/fields/Case_c__c.field-meta.xml
<CustomField>
    <fullName>Case_c__c</fullName>
    <externalDeveloperName>Case__c</externalDeveloperName>
    <inlineHelpText>What is the Case number related to my request?</inlineHelpText>
    <label>Case #</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>