force-app/main/default/objects/Request_c__x/fields/Closed_Won_Opty_s_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Opty_s_c__c</fullName>
    <externalDeveloperName>Closed_Won_Opty_s__c</externalDeveloperName>
    <inlineHelpText>Click here and paste the BID numbers associated to find out the value and products of all closed won opty&apos;s. .</inlineHelpText>
    <label>Closed Won Opty&apos;s</label>
    <type>Url</type>
</CustomField>