force-app/main/default/objects/Request_c__x/fields/Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Comments_c__c</fullName>
    <externalDeveloperName>Comments__c</externalDeveloperName>
    <label>Comments</label>
    <length>254</length>
    <type>Text</type>
</CustomField>