force-app/main/default/objects/Request_c__x/fields/Complete_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Complete_Date_c__c</fullName>
    <externalDeveloperName>Complete_Date__c</externalDeveloperName>
    <label>Complete Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>