force-app/main/default/objects/Request_c__x/fields/Confirmed_Reopening_c__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Reopening_c__c</fullName>
    <externalDeveloperName>Confirmed_Reopening__c</externalDeveloperName>
    <label>Confirmed Reopening</label>
    <type>Date</type>
</CustomField>