force-app/main/default/objects/Request_c__x/fields/Converted_to_Payment_Plan_c__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Payment_Plan_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Converted_to_Payment_Plan__c</externalDeveloperName>
    <inlineHelpText>Was this relief request converted to a payment plan?</inlineHelpText>
    <label>Converted to Payment Plan</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>