force-app/main/default/objects/Request_c__x/fields/Current_Monthly_Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Fee_c__c</fullName>
    <externalDeveloperName>Current_Monthly_Fee__c</externalDeveloperName>
    <inlineHelpText>Corresponding to the total of the products requested</inlineHelpText>
    <label>Current Monthly Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>