force-app/main/default/objects/Request_c__x/fields/Customer_Since_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since_c__c</fullName>
    <externalDeveloperName>Customer_Since__c</externalDeveloperName>
    <inlineHelpText>How many years has this Account been a customer?</inlineHelpText>
    <label>Years as Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1</fullName>
            </value>
            <value>
                <fullName>1-3</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>&gt;5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>