force-app/main/default/objects/Request_c__x/fields/Date_Completed_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_c__c</fullName>
    <externalDeveloperName>Date_Completed__c</externalDeveloperName>
    <inlineHelpText>When was the request completed?</inlineHelpText>
    <label>Request Complete</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>