force-app/main/default/objects/Request_c__x/fields/Division_c__c.field-meta.xml
<CustomField>
    <fullName>Division_c__c</fullName>
    <externalDeveloperName>Division__c</externalDeveloperName>
    <inlineHelpText>What is the Division of the Account Owner?</inlineHelpText>
    <label>Division</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>