force-app/main/default/objects/Request_c__x/fields/Effective_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_c__c</fullName>
    <externalDeveloperName>Effective_Date__c</externalDeveloperName>
    <inlineHelpText>The date from which the suspension is requested to start</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>