force-app/main/default/objects/Request_c__x/fields/Escalation_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason_c__c</fullName>
    <externalDeveloperName>Escalation_Reason__c</externalDeveloperName>
    <inlineHelpText>If &lt;4 day SLA is requested, indicate the reason for the request to kick-off the escalation process.</inlineHelpText>
    <label>Escalation Reason</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add Comp Set</fullName>
            </value>
            <value>
                <fullName>Affiliation Request</fullName>
            </value>
            <value>
                <fullName>Contract Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>