force-app/main/default/objects/Request_c__x/fields/Finance_Approved_c__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Finance_Approved__c</externalDeveloperName>
    <label>Finance Approved</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>