force-app/main/default/objects/Request_c__x/fields/Finance_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Finance_Status_c__c</fullName>
    <externalDeveloperName>Finance_Status__c</externalDeveloperName>
    <label>Finance Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>