force-app/main/default/objects/Request_c__x/fields/Management_Company_for_c__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_for_c__c</fullName>
    <externalDeveloperName>Management_Company_for__c</externalDeveloperName>
    <inlineHelpText>Is there a management company related to this BID?</inlineHelpText>
    <label>Management Company</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>