force-app/main/default/objects/Request_c__x/fields/Months_Approved_for_Credit_c__c.field-meta.xml
<CustomField>
    <fullName>Months_Approved_for_Credit_c__c</fullName>
    <externalDeveloperName>Months_Approved_for_Credit__c</externalDeveloperName>
    <inlineHelpText>What month(s) has the customer been approved for credit?</inlineHelpText>
    <label>Months Approved for Credit</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>