force-app/main/default/objects/Request_c__x/fields/Months_to_be_Credit_c__c.field-meta.xml
<CustomField>
    <fullName>Months_to_be_Credit_c__c</fullName>
    <externalDeveloperName>Months_to_be_Credit__c</externalDeveloperName>
    <inlineHelpText>What month(s) is the customer requesting to be credited for?</inlineHelpText>
    <label>Months Requested for Credit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>Decemer</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>