force-app/main/default/objects/Request_c__x/fields/NMI_Fee_Relief_c__c.field-meta.xml
<CustomField>
    <fullName>NMI_Fee_Relief_c__c</fullName>
    <externalDeveloperName>NMI_Fee_Relief__c</externalDeveloperName>
    <label>NMI Fee Relief</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Requested/Granted</fullName>
            </value>
            <value>
                <fullName>Requested/Rejected</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>