force-app/main/default/objects/Request_c__x/fields/Occupancy_Last_Confirmed_c__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Last_Confirmed_c__c</fullName>
    <externalDeveloperName>Occupancy_Last_Confirmed__c</externalDeveloperName>
    <inlineHelpText>When was the occupancy last confirmed?</inlineHelpText>
    <label>Occupancy Last Updated</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>