force-app/main/default/objects/Request_c__x/fields/Ownership_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Group_c__c</fullName>
    <externalDeveloperName>Ownership_Group__c</externalDeveloperName>
    <label>Ownership Group</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>TC Requests</relationshipLabel>
    <relationshipName>TC_Requests2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>