force-app/main/default/objects/Request_c__x/fields/Policy_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status_c__c</fullName>
    <externalDeveloperName>Policy_Status__c</externalDeveloperName>
    <label>Policy Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>