force-app/main/default/objects/Request_c__x/fields/Products_Requested_Count_c__c.field-meta.xml
<CustomField>
    <fullName>Products_Requested_Count_c__c</fullName>
    <externalDeveloperName>Products_Requested_Count__c</externalDeveloperName>
    <label>Products Requested Count</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>