force-app/main/default/objects/Request_c__x/fields/Proof_of_Occupancy_Attached_c__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Occupancy_Attached_c__c</fullName>
    <externalDeveloperName>Proof_of_Occupancy_Attached__c</externalDeveloperName>
    <inlineHelpText>What is the hotels current occupancy?</inlineHelpText>
    <label>Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Hotel Closed</fullName>
            </value>
            <value>
                <fullName>Single Digit</fullName>
            </value>
            <value>
                <fullName>&gt;10%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>