force-app/main/default/objects/Request_c__x/fields/Property_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Property_Name_c__c</fullName>
    <externalDeveloperName>Property_Name__c</externalDeveloperName>
    <inlineHelpText>What is the name of the Property?</inlineHelpText>
    <label>Property Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>