force-app/main/default/objects/Request_c__x/fields/Rejection_Reaso_c__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reaso_c__c</fullName>
    <externalDeveloperName>Rejection_Reaso__c</externalDeveloperName>
    <inlineHelpText>Why was this request rejected?</inlineHelpText>
    <label>Rejection Reason</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account on Credit Hold</fullName>
            </value>
            <value>
                <fullName>Aging &gt;150</fullName>
            </value>
            <value>
                <fullName>Already Paid</fullName>
            </value>
            <value>
                <fullName>Duplicate-Previously Rejected</fullName>
            </value>
            <value>
                <fullName>High Occupancy</fullName>
                <label>&gt;10% Occupancy</label>
            </value>
            <value>
                <fullName>Low Tenure</fullName>
            </value>
            <value>
                <fullName>Low Valuation</fullName>
            </value>
            <value>
                <fullName>Missing/Insufficient Information</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Plan Option</fullName>
            </value>
            <value>
                <fullName>Slow Payer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>