force-app/main/default/objects/Request_c__x/fields/Rejection_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_c__c</fullName>
    <externalDeveloperName>Rejection_Reason__c</externalDeveloperName>
    <inlineHelpText>Why did the SLT not approve this request?</inlineHelpText>
    <label>Rejection Reason Detail</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>