force-app/main/default/objects/Request_c__x/fields/Related_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_c__c</fullName>
    <externalDeveloperName>Related_Account__c</externalDeveloperName>
    <label>Account</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>TC Requests</relationshipLabel>
    <relationshipName>TC_Requests3</relationshipName>
    <type>ExternalLookup</type>
</CustomField>