force-app/main/default/objects/Request_c__x/fields/Renewal_Month_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Month_c__c</fullName>
    <externalDeveloperName>Renewal_Month__c</externalDeveloperName>
    <label>Renewal Month</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>