force-app/main/default/objects/Request_c__x/fields/Renewal_Start_Date_1_Yr_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Start_Date_1_Yr_c__c</fullName>
    <externalDeveloperName>Renewal_Start_Date_1_Yr__c</externalDeveloperName>
    <label>Renewal Start Date +1 Yr</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>