force-app/main/default/objects/Request_c__x/fields/Renewal_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Start_Date_c__c</fullName>
    <externalDeveloperName>Renewal_Start_Date__c</externalDeveloperName>
    <inlineHelpText>When is the renewal start date?</inlineHelpText>
    <label>Renewal Start Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>