force-app/main/default/objects/Request_c__x/fields/Requestor_c__c.field-meta.xml
<CustomField>
    <fullName>Requestor_c__c</fullName>
    <externalDeveloperName>Requestor__c</externalDeveloperName>
    <inlineHelpText>Who is requesting?</inlineHelpText>
    <label>Requestor</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>TC Requests</relationshipLabel>
    <relationshipName>TC_Requests1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>