force-app/main/default/objects/Request_c__x/fields/Shipping_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_c__c</fullName>
    <externalDeveloperName>Shipping_Address__c</externalDeveloperName>
    <inlineHelpText>What is the shipping address of the Account?</inlineHelpText>
    <label>Shipping Address</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>