force-app/main/default/objects/Request_c__x/fields/Status_c__c.field-meta.xml
<CustomField>
    <fullName>Status_c__c</fullName>
    <externalDeveloperName>Status__c</externalDeveloperName>
    <inlineHelpText>What status is this request in?</inlineHelpText>
    <label>Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Pending Finance Approval</fullName>
            </value>
            <value>
                <fullName>Pending Product Approval</fullName>
            </value>
            <value>
                <fullName>Internally Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Customer Accepted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Info</fullName>
            </value>
            <value>
                <fullName>Ok_to_Implement</fullName>
                <label>Ready to Process-Finance</label>
            </value>
            <value>
                <fullName>Pending Reactivation</fullName>
            </value>
            <value>
                <fullName>Reactivation Complete</fullName>
            </value>
            <value>
                <fullName>Reopening Date Renegotiation</fullName>
            </value>
            <value>
                <fullName>Reopening Dates Approved</fullName>
            </value>
            <value>
                <fullName>Reopening Dates Rejected</fullName>
            </value>
            <value>
                <fullName>Confirmed Termination</fullName>
            </value>
            <value>
                <fullName>Pending Signed Amendment</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Payment Plan Approved</fullName>
            </value>
            <value>
                <fullName>Payment Plan Rejected</fullName>
            </value>
            <value>
                <fullName>Payment Plan Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>