force-app/main/default/objects/Request_c__x/fields/Termination_Penalty_c__c.field-meta.xml
<CustomField>
    <fullName>Termination_Penalty_c__c</fullName>
    <externalDeveloperName>Termination_Penalty__c</externalDeveloperName>
    <inlineHelpText>Amount requested for internal approval which the customer will pay to terminate the contract early</inlineHelpText>
    <label>Termination Penalty</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>