force-app/main/default/objects/Request_c__x/fields/Today_s_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date_c__c</fullName>
    <externalDeveloperName>Today_s_Date__c</externalDeveloperName>
    <label>Today&apos;s Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>